Fix chart spacing

--- a/core/static/css/_components.scss
+++ b/core/static/css/_components.scss
@@ -588,10 +588,6 @@ table.api-table {
 		padding-left: $gap / 2
 	}
 
-	.chart-container:nth-child(1), .chart-container:nth-child(2) {
-		padding-bottom: $gap;
-	}
-
     #pdb-ngl {
         display: flex;
         position: relative;
